--- a/dating/sass/blocks/form.scss
+++ b/dating/sass/blocks/form.scss
@@ -12,7 +12,7 @@
   margin: 0 0 20px 0;
   color: #474349;
   font-size: 25px;
-  font-weight: 400;
+  font-weight: 600;
   text-align: center;
 }
 
@@ -157,6 +157,13 @@
   &:hover {
     background: #ff8015;
   }
+  
+  &--login {
+    width: 300px;
+    margin: 0 0 0 auto;
+    background: #ff6901;
+    cursor: pointer;
+  }
 }
 
 .form__sign {
@@ -177,5 +184,104 @@
   
   &:hover {
     border-bottom: 1px solid #ff6901;
+  }
+}
+
+.form__forgot,
+.form__join {
+  color: #ff6901;
+  font-size: 14px;
+  font-weight: 600;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.form__agree {
+  color: #343a40;
+  font-size: 14px;
+  font-weight: 600;
+  text-transform: none;
+  cursor: pointer;
+}
+
+.form__terms {
+  color: #FF6900;
+  text-decoration: none;
+}
+
+@media screen and ($tablet-widths) {
+  .form {
+    margin: auto;
+  }
+}
+
+@media screen and ($mobile-widths) {
+  .form {
+    width: 95%;
+    padding: 30px 20px;
+  }
+  
+  .form__cta {
+    font-size: 20px;
+  }
+  
+  .form__button {
+    width: 260px;
+    margin: 0 auto 20px auto; 
+    
+    &::before {
+      left: 25px;
+    }
+  }
+  
+  .form__another {
+    width: auto;
+    margin: 0 auto 20px auto;
+    font-size: 10px;
+    
+    &--notline {
+      margin: 0;
+    }
+  }
+  
+  .form__label {
+    align-items: flex-start;
+    flex-direction: column;
+    font-size: 16px;
+  }
+  
+  .form__input {
+    width: 100%;
+    margin: 10px 0 0 0;
+  }
+  
+  .form__group {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin: 10px 0 0 0;
+  }
+  
+  .form__select {
+    
+    &--country {
+      width: 100%;
+      margin: 10px 0 0 0;
+    }
+  }
+  
+  .form__sign {
+    align-items: center;
+    flex-wrap: wrap;
+    width: auto;
+  }
+  
+  .form__submit {
+    // width: 150px;
+    font-size: 11px;
+    
+    &--login {
+      width: 100%;
+    }
   }
 }
