--- a/dating/sass/blocks/form.scss
+++ b/dating/sass/blocks/form.scss
@@ -16,6 +16,13 @@
   text-align: center;
 }
 
+.form__how {
+  margin: 0 0 50px 0;
+  color: #e1eaf0;
+  font-size: 14px;
+  text-align: center;
+}
+
 .form__button {
   width: 300px;
   margin: 0 0 20px auto;
