--- a/dating/sass/blocks/profile.scss
+++ b/dating/sass/blocks/profile.scss
@@ -130,6 +130,7 @@
 }
 
 .profile__img-button {
+  position: relative;
   width: 60px;
   height: 40px;
   border: none;
@@ -165,7 +166,35 @@
     &:hover {
       background: #ff6901 url('../img/profile-img-crop.png') no-repeat center / 17px;
     }
+    
+    &:hover + .profile__img-title {
+      // display: block;
+      clip: auto;
+      opacity: 1;
+    }
   }
+}
+
+.profile__img-title {
+  position: absolute;
+  top: -40px;
+  left: 0;
+  // display: none;
+  width: 180px;
+  // margin: 0 0 10px 0;
+  padding: 10px 0;
+  color: #7880cd;
+  font-size: 11px;
+  font-weight: 700;
+  border: none;
+  border-radius: 8px;
+  text-transform: uppercase;
+  background: #fff;
+  cursor: pointer;
+  clip: rect(0, 0, 0, 0);
+  outline: none;
+  opacity: 0;
+  transition: 0.4s;
 }
 
 .profile__info {
